--- a/SmartRecipeFinder/SmartRecipeFinder/SmartRecipeFinder.csproj
+++ b/SmartRecipeFinder/SmartRecipeFinder/SmartRecipeFinder.csproj
@@ -71,7 +71,9 @@
     <Content Include="favorites.aspx" />
     <Content Include="home.aspx" />
     <Content Include="images\coding.png" />
+    <Content Include="images\user-login.png" />
     <Content Include="login.aspx" />
+    <Content Include="profile.aspx" />
     <Content Include="register.aspx" />
     <Content Include="style.css" />
     <Content Include="trending-recipes.aspx" />
@@ -108,6 +110,13 @@
     </Compile>
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="profile.aspx.cs">
+      <DependentUpon>profile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="profile.aspx.designer.cs">
+      <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="register.aspx.cs">
